Fade works, but it's a bit buggy because jquery bad

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <!--CodeDay-->
         <div class="grid-item grid-item--image">
-            <img src="images/codedaysd.png" alt="CodeDay SD Logo" width="230" height="230">
+            <img class="grid-img" src="images/codedaysd.png" alt="CodeDay SD Logo" width="230" height="230">
         </div>
         <!--SRND-->
         <div class="grid-item">
