Added slanty description thing, trying out clip paths instead

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a class="active" href="index.html">Home</a>
         <a href="contact.html">Contact</a>
         <a href="about.html">About</a>
+        <a href="resume.html">Resume</a>
         <a href="https://github.com/JakeCover">GitHub</a>
     </div>
 </header>
@@ -30,10 +31,28 @@
         <!--CodeDay-->
         <div class="grid-item grid-item--image">
             <img class="grid-img" src="images/codedaysd.png" alt="CodeDay SD Logo" width="230" height="230">
+            <div class="service-wrapper-inner title">
+                <h2>CodeDay</h2>
+                <div class="description">
+                    <p>
+                        CodeDay, an event by SRND, is a beginner-friendly 24 hour event for students that challenges attendees to create a game or an app.<br>
+                        I served as the Regional Manager for CodeDay San Diego for one year.
+                    </p>
+                </div>
+            </div>
+            <div class="service-overlay title"></div>
+
         </div>
         <!--SRND-->
-        <div class="grid-item">
-            SRND
+        <div class="grid-item grid-item--image">
+            <img src="images/codeday-notext-color.svg" alt="Redish Heart, SRND Logo" width="230" height="230">
+            <div class="service-wrapper-inner title">
+                <h2>SRND</h2>
+                <div class="description">
+                    <p>SRND is an educational nonprofit that works to provide CS education to high school and college students and to increase diversity in tech.</p>
+                </div>
+            </div>
+            <div class="service-overlay title"></div>
         </div>
         <!--ScoreSaver Installer-->
         <div class="grid-item">
@@ -42,6 +61,12 @@
         <!--Foresight-->
         <div class="grid-item grid-item--image">
             <img src="images/foresightsports.png" alt="ForeSight Sports Logo0" width="480">
+            <div class="service-wrapper-inner notitle">
+                <div class="description">
+                    <p>SRND is an educational nonprofit that works to provide CS education to high school and college students and to increase diversity in tech.</p>
+                </div>
+            </div>
+            <div class="service-overlay notitle"></div>
         </div>
         <!--ReplyBot-->
         <div class="grid-item grid-item--tall3">ReplyBot</div>
