--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>About Me</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="css/main.css">
 
 </head>
