--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
         <a class="active" href="index.html">Home</a>
         <a href="contact.html">Contact</a>
         <a href="about.html">About</a>
+        <a href="resume.html">Resume</a>
         <a href="https://github.com/JakeCover">GitHub</a>
     </div>
 </header>
