Added more icons and more text, now changing how image widths work to make it all more responsive

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/masonry.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
 <header class="header">
@@ -24,9 +25,17 @@
 <div class="page">
     <div class="grid">
         <!--Distest-->
-        <div class="grid-item grid-item--tall4">
-            Distest <br>
-            One of my favorite Python projects, my attempt at implementing a test suite for discord bots.
+        <div class="grid-item grid-item--image">
+            <img class="grid-img" src="images/distest.svg" alt="CodeDay SD Logo" width="230" height="230">
+            <div class="service-wrapper-inner title">
+                <h2>Distest</h2>
+                <div class="description">
+                    <p>
+                        One of my favorite Python projects, a tool to write automated integration tests for discord bots.
+                    </p>
+                </div>
+            </div>
+            <div class="service-overlay title"></div>
         </div>
         <!--CodeDay-->
         <div class="grid-item grid-item--image">
@@ -55,8 +64,15 @@
             <div class="service-overlay title"></div>
         </div>
         <!--ScoreSaver Installer-->
-        <div class="grid-item">
-            ScoreSaber Installer
+        <div class="grid-item grid-item--image">
+            <img src="images/scoresaver.svg" alt="Red to Blue Gradient w/ White Download Icon" width="230" height="230">
+            <div class="service-wrapper-inner title">
+                <h2>ScoreSaver</h2>
+                <div class="description">
+                    <p>SRND is an educational nonprofit that works to provide CS education to high school and college students and to increase diversity in tech.</p>
+                </div>
+            </div>
+            <div class="service-overlay title"></div>
         </div>
         <!--Foresight-->
         <div class="grid-item grid-item--image">
@@ -72,6 +88,33 @@
         <div class="grid-item grid-item--tall3">ReplyBot</div>
     </div>
 </div>
+
+<!-- Site footer -->
+<footer class="site-footer">
+    <div class="footer-grid">
+        <div class="col-8">
+            <h6>Jake Cover</h6>
+            <p class="text-justify">
+                Made by Jake Cover, a CS student who really needs to find something witty and interesting to put here soon.
+                <br>
+                Checklist by Arthur Shlain from the Noun Project
+            </p>
+        </div>
+        <div class="col-3">
+            <h6>Links and Stuff</h6>
+            <ul class="footer-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="https://github.com/JakeCover">GitHub</a></li>
+            </ul>
+        </div>
+    </div>
+    <hr>
+    <div class="copyright-text">Copyright &copy; 2020 All Rights Reserved by Jake Cover</div>
+</footer>
+
 
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script src="scripts/masonry_conf.js"></script>
