--- a/index.html
+++ b/index.html
@@ -24,68 +24,86 @@
 </header>
 <div class="page">
     <div class="grid">
-        <!--Distest-->
-        <div class="grid-item grid-item--image">
-            <img class="grid-img" src="images/distest.svg" alt="CodeDay SD Logo" width="230" height="230">
-            <div class="service-wrapper-inner title">
-                <h2>Distest</h2>
-                <div class="description">
-                    <p>
-                        One of my favorite Python projects, a tool to write automated integration tests for discord bots.
-                    </p>
-                </div>
-            </div>
-            <div class="service-overlay title"></div>
-        </div>
+        <div class="grid-sizer"></div>
         <!--CodeDay-->
-        <div class="grid-item grid-item--image">
-            <img class="grid-img" src="images/codedaysd.png" alt="CodeDay SD Logo" width="230" height="230">
-            <div class="service-wrapper-inner title">
-                <h2>CodeDay</h2>
-                <div class="description">
-                    <p>
-                        CodeDay, an event by SRND, is a beginner-friendly 24 hour event for students that challenges attendees to create a game or an app.<br>
-                        I served as the Regional Manager for CodeDay San Diego for one year.
-                    </p>
+        <div class="grid-item-padding grid-item--std">
+            <div class="grid-item">
+                <img class="grid-img" src="images/codedaysd.png" alt="CodeDay SD Logo">
+                <div class="service-wrapper-inner title">
+                    <h2>CodeDay</h2>
+                    <div class="description">
+                        <p>
+                            CodeDay, an event by SRND, is a beginner-friendly 24 hour event for students that challenges
+                            attendees to create a game or an app.<br>
+                            I served as the Regional Manager for CodeDay San Diego for one year.
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="service-overlay title"></div>
+                <div class="service-overlay title"></div>
 
+            </div>
         </div>
         <!--SRND-->
-        <div class="grid-item grid-item--image">
-            <img src="images/codeday-notext-color.svg" alt="Redish Heart, SRND Logo" width="230" height="230">
-            <div class="service-wrapper-inner title">
-                <h2>SRND</h2>
-                <div class="description">
-                    <p>SRND is an educational nonprofit that works to provide CS education to high school and college students and to increase diversity in tech.</p>
+        <div class="grid-item-padding grid-item--std">
+            <div class="grid-item">
+                <img src="images/codeday-notext-color.svg" alt="Redish Heart, SRND Logo">
+                <div class="service-wrapper-inner title">
+                    <h2>SRND</h2>
+                    <div class="description">
+                        <p>SRND is an educational nonprofit that works to provide CS education to high school and
+                            college students and to increase diversity in tech.</p>
+                    </div>
                 </div>
+                <div class="service-overlay title"></div>
             </div>
-            <div class="service-overlay title"></div>
+        </div>
+        <!--Distest-->
+        <div class="grid-item-padding grid-item--std">
+            <div class="grid-item">
+                <img class="grid-img" src="images/distest.svg" alt="CodeDay SD Logo">
+                <div class="service-wrapper-inner title">
+                    <h2>Distest</h2>
+                    <div class="description">
+                        <p>
+                            One of my favorite Python projects, a tool to write automated integration tests for discord
+                            bots.
+                        </p>
+                    </div>
+                </div>
+                <div class="service-overlay title"></div>
+            </div>
         </div>
         <!--ScoreSaver Installer-->
-        <div class="grid-item grid-item--image">
-            <img src="images/scoresaver.svg" alt="Red to Blue Gradient w/ White Download Icon" width="230" height="230">
-            <div class="service-wrapper-inner title">
-                <h2>ScoreSaver</h2>
-                <div class="description">
-                    <p>SRND is an educational nonprofit that works to provide CS education to high school and college students and to increase diversity in tech.</p>
+        <div class="grid-item-padding grid-item--std">
+            <div class="grid-item">
+                <img src="images/scoresaver.svg" alt="Red to Blue Gradient w/ White Download Icon">
+                <div class="service-wrapper-inner title">
+                    <h2>ScoreSaver</h2>
+                    <div class="description">
+                        <p>SRND is an educational nonprofit that works to provide CS education to high school and
+                            college students and to increase diversity in tech.</p>
+                    </div>
                 </div>
+                <div class="service-overlay title"></div>
             </div>
-            <div class="service-overlay title"></div>
         </div>
         <!--Foresight-->
-        <div class="grid-item grid-item--image">
-            <img src="images/foresightsports.png" alt="ForeSight Sports Logo0" width="480">
-            <div class="service-wrapper-inner notitle">
-                <div class="description">
-                    <p>SRND is an educational nonprofit that works to provide CS education to high school and college students and to increase diversity in tech.</p>
+        <div class="grid-item-padding grid-item--wide">
+            <div class="grid-item">
+                <img src="images/foresightsports.png" alt="ForeSight Sports Logo0">
+                <div class="service-wrapper-inner notitle">
+                    <div class="description">
+                        <p>SRND is an educational nonprofit that works to provide CS education to high school and
+                            college students and to increase diversity in tech.</p>
+                    </div>
                 </div>
+                <div class="service-overlay notitle"></div>
             </div>
-            <div class="service-overlay notitle"></div>
         </div>
         <!--ReplyBot-->
-        <div class="grid-item grid-item--tall3">ReplyBot</div>
+        <div class="grid-item-padding">
+            <div class="grid-item grid-item--tall3">ReplyBot</div>
+        </div>
     </div>
 </div>
 
