Updated text content

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
 
 </header>
-
+<div class="page" style="text-align: center;">
+    <p style="font-size: x-large">Hey! This site is still under construction. You can see where it stands today, but additional content may be added soon.</p>
+</div>
 <div class="page">
     <div class="container-fluid">
         <div class="row">
@@ -60,7 +62,8 @@
                 </div>
                 <div class="description">
                     <p>SRND is an educational nonprofit that works to provide CS education to high school and
-                        college students and to increase diversity in tech.</p>
+                        college students and to increase diversity in tech. I worked here for a year to create a number
+                        of tools and projects, which can be found on my resume.</p>
                 </div>
             </div>
             <div class="col-xl-3 col-md-4 col-sm-6 tall top_buffer">
@@ -68,8 +71,8 @@
                     <img class="img-fluid" src="images/distest.svg" alt="Distest Logo">
                 </div>
                 <div class="description">
-                    <p>SRND is an educational nonprofit that works to provide CS education to high school and
-                        college students and to increase diversity in tech.</p>
+                    <p>Distest is a testing library for Discord bots that allows for full integration tests of your bot,
+                        improving the discord bot development workflow significantly.</p>
                 </div>
             </div>
             <div class="col-xl-3 col-md-4 col-sm-6 tall top_buffer">
@@ -77,8 +80,8 @@
                     <img class="img-fluid" src="images/scoresaver.svg" alt="Red to Blue Gradient w/ White Download Icon">
                 </div>
                 <div class="description">
-                    <p>SRND is an educational nonprofit that works to provide CS education to high school and
-                        college students and to increase diversity in tech.</p>
+                    <p>A Chrome extension to help you download beatsaber songs directly from ScoreSaber. No more searching
+                    for mapper names on BeatSaver, just download the newest ranked songs directly!</p>
                 </div>
             </div>
             <div class="col-xs-12 wide top_buffer">
@@ -86,12 +89,9 @@
                     <img class="img-fluid" src="images/foresightsports.png" alt="ForeSight Sports Logo0">
                 </div>
                 <div class="description">
-                    <p>SRND is an educational nonprofit that works to provide CS education to high school and
-                        college students and to increase diversity in tech.</p>
+                    <p>Foresight Sports creates advanced augmented reality sports experiences. I created multiple games
+                        using Unity that took data from their launch monitor technology and translated it into a seamless experience.</p>
                 </div>
-            </div>
-            <div class="col-md-4 tall">
-                One of three columns
             </div>
         </div>
     </div>
