Even better now!

--- a/Old/index.html
+++ b/Old/index.html
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="col-xl-3 col-lg-4 col-sm-6 tall top_buffer">
                 <div class="image">
-                    <img class="img-fluid" src="images/codedaysd.png" alt="CodeDay SD Logo">
+                    <img class="img-fluid" src="../src/images/codedaysd.png" alt="CodeDay SD Logo">
                 </div>
                 <div class="description">
                     <p>CodeDay, an event by SRND, is a beginner-friendly 24 hour event for students that challenges
@@ -58,7 +58,7 @@
             </div>
             <div class="col-xl-3 col-md-4 col-sm-6 tall top_buffer">
                 <div class="image">
-                    <img class="img-fluid" src="images/codeday-notext-color.svg" alt="Redish Heart, SRND Logo">
+                    <img class="img-fluid" src="../src/images/codeday-notext-color.svg" alt="Redish Heart, SRND Logo">
                 </div>
                 <div class="description">
                     <p>SRND is an educational nonprofit that works to provide CS education to high school and
@@ -68,7 +68,7 @@
             </div>
             <div class="col-xl-3 col-md-4 col-sm-6 tall top_buffer">
                 <div class="image">
-                    <img class="img-fluid" src="images/distest.svg" alt="Distest Logo">
+                    <img class="img-fluid" src="../src/images/distest.svg" alt="Distest Logo">
                 </div>
                 <div class="description">
                     <p>Distest is a testing library for Discord bots that allows for full integration tests of your bot,
@@ -77,7 +77,7 @@
             </div>
             <div class="col-xl-3 col-md-4 col-sm-6 tall top_buffer">
                 <div class="image">
-                    <img class="img-fluid" src="images/scoresaver.svg" alt="Red to Blue Gradient w/ White Download Icon">
+                    <img class="img-fluid" src="../src/images/scoresaver.svg" alt="Red to Blue Gradient w/ White Download Icon">
                 </div>
                 <div class="description">
                     <p>A Chrome extension to help you download beatsaber songs directly from ScoreSaber. No more searching
@@ -86,7 +86,7 @@
             </div>
             <div class="col-xs-12 wide top_buffer">
                 <div class="image">
-                    <img class="img-fluid" src="images/foresightsports.png" alt="ForeSight Sports Logo0">
+                    <img class="img-fluid" src="../src/images/foresightsports.png" alt="ForeSight Sports Logo0">
                 </div>
                 <div class="description">
                     <p>Foresight Sports creates advanced augmented reality sports experiences. I created multiple games
