Updated a few random things

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Jake Cover</title>
+    <script async defer data-website-id="7b846b7f-e368-441b-9663-0436eabec402" src="https://umami.cobular.com/umami.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
