--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Jake Cover's Personal Website"
+      content="Julie Cover's Personal Website"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- generics -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon-32.png" sizes="32x32">
+    <link rel="icon" href="%PUBLIC_URL%/favicon-128.png" sizes="128x128">
+    <link rel="icon" href="%PUBLIC_URL%/favicon-192.png" sizes="192x192">
+
+    <!-- Android -->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon-196.png" sizes="196x196">
+
+    <!-- iOS -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-152.png" sizes="152x152">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-167.png" sizes="167x167">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-180.png" sizes="180x180">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Jake Cover</title>
+    <title>Julie Cover</title>
     <script async defer data-website-id="7b846b7f-e368-441b-9663-0436eabec402" src="https://umami.cobular.com/umami.js"></script>
   </head>
   <body>
