--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Julie Cover</title>
-    <script async defer data-website-id="7b846b7f-e368-441b-9663-0436eabec402" src="https://umami.cobular.com/umami.js"></script>
-  </head>
+
+    <script async src="https://umami.cobular.com/script.js" data-website-id="7b846b7f-e368-441b-9663-0436eabec402"></script>  </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
